--- a/Web/EasyTravel.Web/Views/Home/Index.cshtml
+++ b/Web/EasyTravel.Web/Views/Home/Index.cshtml
@@ -1,9 +1,64 @@
 ﻿@using EasyTravel.Common
+@model EasyTravel.Web.ViewModels.Home.CategoryListViewModel
 @{
     this.ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
+
+    @*<section class="jumbotron jumbotron-fluid jumboHeroImage">
+        <div class="container">
+            <div class="row pt-5">
+                <div class="col-lg-12 pt-5">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+                    <form asp-action="Search" class="row d-flex justify-content-center">
+                        <div class="col-6 pr-0">
+                            <input asp-for="SearchText"
+                                   class="form-control form-control-lg"
+                                   id="inputlg"
+                                   placeholder="Search by city..." />
+                        </div>
+                        <div class="col-2">
+                            <input type="submit"
+                                   value="Search"
+                                   class="btn btn-lg text-white"
+                                   style="background-color:#FF5581;border-radius:0">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>*@
+
+    <section>
+        <div class="jumbotron jumbotron-fluid">
+            <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+           
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </p>
+        </div>
+
+    </section>
+
+    <div class="container-fluid">
+        <div class="row">
+
+            @foreach (var category in this.Model.Categories)
+            {
+
+                <div class="card col-md-4">
+
+                    <div class="card-body">
+                        <h5 class="card-title">@category.Name</h5>
+                        <img class="img-fluid" src="@category.RemoteImageUrl" alt="">
+                        @*<a asp-controller="Recipes" asp-action="ById" asp-route-id="@recipe.Id" class="btn btn-primary">Go to recipe</a>*@
+                    </div>
+                </div>
+            }
+
+        </div>
+    </div>
+
