--- a/Web/EasyTravel.Web/Views/Home/Index.cshtml
+++ b/Web/EasyTravel.Web/Views/Home/Index.cshtml
@@ -7,41 +7,44 @@
 <div class="text-center">
 
     @*<section class="jumbotron jumbotron-fluid jumboHeroImage">
-        <div class="container">
-            <div class="row pt-5">
-                <div class="col-lg-12 pt-5">
-    <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-                    <form asp-action="Search" class="row d-flex justify-content-center">
-                        <div class="col-6 pr-0">
-                            <input asp-for="SearchText"
-                                   class="form-control form-control-lg"
-                                   id="inputlg"
-                                   placeholder="Search by city..." />
-                        </div>
-                        <div class="col-2">
-                            <input type="submit"
-                                   value="Search"
-                                   class="btn btn-lg text-white"
-                                   style="background-color:#FF5581;border-radius:0">
-                        </div>
-                    </form>
+            <div class="container">
+                <div class="row pt-5">
+                    <div class="col-lg-12 pt-5">
+        <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
+                        <form asp-action="Search" class="row d-flex justify-content-center">
+                            <div class="col-6 pr-0">
+                                <input asp-for="SearchText"
+                                       class="form-control form-control-lg"
+                                       id="inputlg"
+                                       placeholder="Search by city..." />
+                            </div>
+                            <div class="col-2">
+                                <input type="submit"
+                                       value="Search"
+                                       class="btn btn-lg text-white"
+                                       style="background-color:#FF5581;border-radius:0">
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>*@
+        </section>*@
 
-    <section>
-        <div class="jumbotron jumbotron-fluid">
-            <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-           
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-            </p>
+   
+        <div class="jumbotron " style="background: url('https://scan-travel.net/wp-content/uploads/SCAN-Travel-1-1030x579.jpg') no-repeat; background-size: cover">
+            <div class="container">
+
+                <h1 class="display-4 text-primary">Welcome to @GlobalConstants.SystemName!</h1>
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                </p>
+            </div>
+
         </div>
 
-    </section>
 
     <div class="container-fluid">
         <div class="row">
@@ -62,3 +65,7 @@
         </div>
     </div>
 
+    <div class="copyright text-center">
+        <hr />
+        <p class="small">&copy; 2019, made with <span class="text-danger"><i class="fas fa-heart"></i></span> by BootstrapBay</p>
+    </div>
