--- a/Web/EasyTravel.Web/Views/Home/Index.cshtml
+++ b/Web/EasyTravel.Web/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
                     <div class="card-body">
                         <h5 class="card-title">@category.Name</h5>
                         <img class="img-fluid" src="@category.RemoteImageUrl" alt="">
-                        @*<a asp-controller="Recipes" asp-action="ById" asp-route-id="@recipe.Id" class="btn btn-primary">Go to recipe</a>*@
+                        <a asp-controller="Properties" asp-action="GetAllByCategory" asp-route-id="@category.Id" class="btn btn-primary">Go to properties</a>
                     </div>
                 </div>
             }
