Implement sorting by category , property view models and new view

--- a/Web/EasyTravel.Web/Views/Properties/GetAllByCategory.cshtml
+++ b/Web/EasyTravel.Web/Views/Properties/GetAllByCategory.cshtml
@@ -19,7 +19,7 @@
                         <span class="badge badge-success">@prop.PhoneNumber</span>
                         <span class="badge badge-success">@prop.PriceSummerr</span>
                         <h4 class="card-title mt-2">@prop.Name</h4>
-                        <p class="card-text">Owning a dog is great fun and immensely rewarding. But, dogs have complex needs and each dog is unique. </p>
+                        <p class="card-text">@prop.Description</p>
                     </div>
                     <div class="card-footer">
                         <a href="#a" class="btn btn-primary">Read More</a>
