--- a/Web/EasyTravel.Web/Views/Properties/GetAllByCategory.cshtml
+++ b/Web/EasyTravel.Web/Views/Properties/GetAllByCategory.cshtml
@@ -11,7 +11,7 @@
             <div class="component">
                 <div class="card">
                     <div class="card-header">
-                        <img class="card-img" src="@prop.ImageUrl" alt="img">
+                        <img class="card-img" src="@prop.MainImageUrl" alt="img">
                     </div>
                     <div class="card-body">
                         <span class="badge badge-success">@prop.CategoryName</span>
