Implement SinglePropertyViewModel and Service for this model

--- a/Web/EasyTravel.Web/Views/Properties/GetAllByCategory.cshtml
+++ b/Web/EasyTravel.Web/Views/Properties/GetAllByCategory.cshtml
@@ -22,7 +22,7 @@
                         <p class="card-text">@prop.Description</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#a" class="btn btn-primary">Read More</a>
+                        <a asp-controller="Properties" asp-action="ById" asp-route-id="@prop.Id" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
                 </div>
