--- a/Web/EasyTravel.Web/Views/Shared/_Layout.cshtml
+++ b/Web/EasyTravel.Web/Views/Shared/_Layout.cshtml
@@ -52,8 +52,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-
+                        @if (this.User.Identity.IsAuthenticated)
+            {
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Contacts" asp-action="Contact">Contact Us</a>
                         </li>
+
+            }
+                        
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#a" id="navbarDropdownMenuLink" data-toggle="dropdown"
                                aria-haspopup="true" aria-expanded="false">
