--- a/Web/EasyTravel.Web/Views/Shared/_Layout.cshtml
+++ b/Web/EasyTravel.Web/Views/Shared/_Layout.cshtml
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/demo.css">
     <link rel="stylesheet" href="~/css/lazy.css">
- 
+
 </head>
 <body>
     <header>
@@ -82,6 +83,7 @@
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @this.RenderBody()
+
         </main>
     </div>
 
