Edit some scaffolded administration

--- a/Web/EasyTravel.Web/Areas/Administration/Views/ContactForms/Index.cshtml
+++ b/Web/EasyTravel.Web/Areas/Administration/Views/ContactForms/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@model IEnumerable<EasyTravel.Data.Models.ContactForm>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Messages";
 }
 
-<h1>Index</h1>
+<h1>User's Messages</h1>
+<br />
 
-<table class="table">
+<table class="table table-responsive table-striped">
     <thead>
         <tr>
             <th>
