--- a/Web/EasyTravel.Web/Areas/Administration/Views/ContactForms/Details.cshtml
+++ b/Web/EasyTravel.Web/Areas/Administration/Views/ContactForms/Details.cshtml
@@ -55,7 +55,7 @@
 
     
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
+        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-primary">Delete</a>
         <a asp-action="Index" class="btn btn-primary">Back to List</a>
     </div>
 
