--- a/Web/EasyTravel.Web/Areas/Administration/Views/ContactForms/Index.cshtml
+++ b/Web/EasyTravel.Web/Areas/Administration/Views/ContactForms/Index.cshtml
@@ -51,8 +51,8 @@
             </td>
            
             <td>
-              <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
-              <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.Id"  class="btn btn-primary">Details</a>  
+
             </td>
         </tr>
 }
