--- a/Web/EasyTravel.Web/Views/Properties/ById.cshtml
+++ b/Web/EasyTravel.Web/Views/Properties/ById.cshtml
@@ -5,8 +5,9 @@
 }
 
 
+
 <h1 class="display-4">@this.Model.Name</h1>
-<ul class="nav nav-success nav-tabs d-flex flex-column flex-md-row text-center">
+<ul class="nav nav-primary nav-tabs d-flex flex-column flex-md-row text-center">
     <li class="nav-item">
         <a class="nav-link active" data-toggle="tab" href="#home">
             <i class="fas fa-home"></i>  @this.Model.CategoryName
@@ -17,17 +18,33 @@
             <i class="fas fa-compass"></i> @this.Model.CityName
         </a>
     </li>
+
     <li class="nav-item">
         <a class="nav-link" data-toggle="tab" href="#profile">
             <i class="fas fa-umbrella-beach"></i> Summer Price @this.Model.PriceSummerr
         </a>
     </li>
-    <li class="nav-item">
+    @*<li class="nav-item">
         <a class="nav-link" data-toggle="tab" href="#profile">
             <i class="far fa-snowflake"></i> Winter Price @this.Model.PriceWinter
         </a>
+    </li>*@
+    @*<li>
+        <span class="fa fa-star checked" data-vote="1"></span>
+        <span class="fa fa-star checked" data-vote="2"></span>
+        <span class="fa fa-star checked" data-vote="3"></span>
+        <span class="fa fa-star" data-vote="4"></span>
+        <span class="fa fa-star" data-vote="5"></span>
+        <span id="averageVoteValue">5</span><span> / 5</span>
+    </li>*@
+    <li>
+        <button type="button" class="btn btn-outline-danger btn-icon" data-vote="1"><i class="fas fa-heart"></i></button>
+        <button type="button" class="btn btn-outline-danger btn-icon" data-vote="2"><i class="fas fa-heart"></i></button>
+        <button type="button" class="btn btn-outline-danger btn-icon" data-vote="3"><i class="fas fa-heart"></i></button>
+        <button type="button" class="btn btn-outline-danger btn-icon" data-vote="4"><i class="fas fa-heart"></i></button>
+        <button type="button" class="btn btn-outline-danger btn-icon" data-vote="5"><i class="fas fa-heart"></i></button>
+        <span id="averageVoteValue">5</span><span> / 5</span>
     </li>
-
 </ul>
 
 <div class="row">
@@ -41,16 +58,16 @@
                     <div class="row">
                         @foreach (var img in this.Model.Images.Take(6))
                         {
-                            @if(img.RemoteImageUrl != null)
-                {
-                        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                            <img src="@img.RemoteImageUrl"
-                                 class="w-100 shadow-1-strong rounded mb-4"
-                                 alt="img" />
+                            @if (img.RemoteImageUrl != null)
+                            {
+                                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                                    <img src="@img.RemoteImageUrl"
+                                         class="w-100 shadow-1-strong rounded mb-4"
+                                         alt="img" />
 
-                        </div>
+                                </div>
 
-                }
+                            }
 
                         }
                     </div>
@@ -58,7 +75,7 @@
 
                 </div>
                 <div class="card-body">
-                    <ul class="nav nav-success nav-tabs d-flex flex-column flex-md-row text-center">
+                    <ul class="nav nav-primary nav-tabs d-flex flex-column flex-md-row text-center">
                         <li class="nav-item">
                             <a class="nav-link active" data-toggle="tab" href="#home">
                                 <i class="fas fa-user-friends"></i> @this.Model.Capacity
@@ -92,12 +109,12 @@
 <div class="row col-md-4">
 
     <ul class="list-group list-group-flush">
-    @foreach (var am in this.Model.Amenities)
-    {
+        @foreach (var am in this.Model.Amenities)
+        {
 
-        <li class="list-group-item">@am.AmenityName</li>
-       
-    }
+            <li class="list-group-item">@am.AmenityName</li>
+
+        }
     </ul>
 </div>
 
