--- a/Web/EasyTravel.Web/Views/Home/Index.cshtml
+++ b/Web/EasyTravel.Web/Views/Home/Index.cshtml
@@ -39,57 +39,77 @@
 
     </div>
 
-   
-        <div class="container p-5 ">
-            <div class="row">
 
-                @foreach (var category in this.Model.Categories)
-                {
+    <div class="container p-5 ">
+        <div class="row">
 
-                    <div class="card col-md-4">
+            @foreach (var category in this.Model.Categories)
+            {
 
-                        <div class="card-body">
-                            <h5 class="card-title">@category.Name</h5>
-                            <img class="img-fluid" src="@category.RemoteImageUrl" alt="">
-                            <a asp-controller="Properties" asp-action="GetAllByCategory" asp-route-id="@category.Id" class="btn btn-outline-dark">Go to properties</a>
-                        </div>
+                <div class="card col-md-4">
+
+                    <div class="card-body">                       
+                        <h5 class="card-title">@category.Name</h5>
+                        <img class="img-fluid" src="@category.RemoteImageUrl" alt="">
+                        <a asp-controller="Properties" asp-action="GetAllByCategory" asp-route-id="@category.Id" class="btn btn-outline-dark">Go to properties</a>
                     </div>
-                }
+                </div>
+            }
 
-            </div>
         </div>
-      
-        <hr />
+    </div>
+    <hr />
+    <h2>Homes guests love</h2>
+    <div class="container p-5 ">
+        <div class="row">
 
-        <div class="features bg-white">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-4">
-                        <div class="feature">
-                            <div class="big-icon text-primary"><i class="fas fa-suitcase"></i></div>
-                            <h5 class="text-primary">Explore Bulgaria with EasyTravel</h5>
-                            <p class="lead">The purpose of this app is to help people who want to travel safe during the COVID-19 pandemic.You can book entire apartments or individual houses. The application will make sharing easy, enjoyable, and safe. </p>
-                        </div>
+            @foreach (var property in this.Model.TopRaitings)
+            {
+
+                <div class="card col-md-4">
+
+                    <div class="card-body">
+                        <h5 class="card-title">@property.Name <span class="badge badge-primary">@property.AverageRaiting</span></h5>
+                        <img class="img-fluid" src="@property.MainImageUrl" alt="">
+                        
+                        <a  asp-controller="Properties" asp-action="ById" asp-route-id="@property.Id" class="btn btn-primary" >Go to property</a>
+                     
                     </div>
-                    <div class="col-12 col-md-4">
-                        <div class="feature">
-                            <div class="big-icon text-secondary"><i class="fas fa-puzzle-piece"></i></div>
-                            <h5 class="text-secondary">Mix & Match</h5>
-                            <p class="lead">Lazy Kit comes with a variety of different components and sections. By fitting them together you can easily create your desired pages.</p>
-                        </div>
+                </div>
+            }
+
+        </div>
+    </div>
+    <hr />
+    <div class="features bg-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <div class="feature">
+                        <div class="big-icon text-primary"><i class="fas fa-suitcase"></i></div>
+                        <h5 class="text-primary">Explore Bulgaria with EasyTravel</h5>
+                        <p class="lead">The purpose of this app is to help people who want to travel safe during the COVID-19 pandemic.You can book entire apartments or individual houses. The application will make sharing easy, enjoyable, and safe. </p>
                     </div>
-                    <div class="col-12 col-md-4">
-                        <div class="feature">
-                            <div class="big-icon text-success"><i class="fas fa-palette"></i></div>
-                            <h5 class="text-success">Customise the Kit</h5>
-                            <p class="lead">Want to try different colours, spacing or typography? You can customise the Lazy Kit by modifying its SCSS files. </p>
-                        </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="feature">
+                        <div class="big-icon text-secondary"><i class="fas fa-puzzle-piece"></i></div>
+                        <h5 class="text-secondary">Mix & Match</h5>
+                        <p class="lead">Lazy Kit comes with a variety of different components and sections. By fitting them together you can easily create your desired pages.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="feature">
+                        <div class="big-icon text-success"><i class="fas fa-palette"></i></div>
+                        <h5 class="text-success">Customise the Kit</h5>
+                        <p class="lead">Want to try different colours, spacing or typography? You can customise the Lazy Kit by modifying its SCSS files. </p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="copyright text-center">
-            <hr />
-            <p class="small">&copy; 2019, made with <span class="text-danger"><i class="fas fa-heart"></i></span> by BootstrapBay</p>
-        </div>
+    <div class="copyright text-center">
+        <hr />
+        <p class="small">&copy; 2019, made with <span class="text-danger"><i class="fas fa-heart"></i></span> by BootstrapBay</p>
+    </div>
