--- a/Web/EasyTravel.Web/Views/Properties/ById.cshtml
+++ b/Web/EasyTravel.Web/Views/Properties/ById.cshtml
@@ -42,7 +42,7 @@
         <div class="component">
             <div class="card">
                 <div class="card-header">
-                    <img class="card-img " src="@this.Model.MainImageUrl" alt="img">
+                    <img class="card-img img-fluid" src="@this.Model.MainImageUrl" alt="img">
                     <hr />
                     <!-- Gallery -->
                     <div class="row">
@@ -50,7 +50,7 @@
                         {
                             @if (img.RemoteImageUrl != null)
                             {
-                                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0 img-fluid">
                                     <img src="@img.RemoteImageUrl"
                                          class="w-100 shadow-1-strong rounded mb-4"
                                          alt="img" />
